完成首頁Header的基本設計

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -3,8 +3,69 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
+@import "compass";
 @import "compass/reset";
-
-h1 {
-  color: red;
+$bg-color: #efefef;
+$text-color: #4f4f4f;
+$secondy-text-color: #d9dada;
+$highlight-text-color: #ffffff;
+$button-color: #6cdcac;
+body {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 62.5%;
+    text-align: center;
+}
+.hero {
+    max-width: 100em;
+    margin: 0 auto;
+    background: url('../images/TessTao.jpg');
+    background-size: cover;
+    color: $highlight-text-color;
+    header {
+        img {
+            width: 8em;
+            height: 2em;
+            float: left;
+        }
+        ul {
+            float: right;
+            li {
+                float: left;
+                margin: 1em .5em;
+                padding: .5em 1em;
+                border: 1px solid transparent;
+                border-radius: 2px;
+                &:last-child {
+                    border: 1px solid $highlight-text-color;
+                }
+            }
+        }
+        @include clearfix;
+    }
+    h1 {
+        font-size: 4em;
+        padding: 1em 0 .5em 0;
+    }
+    h2 {
+        font-size: 2em;
+    }
+    form {
+        padding: 2em 0 4em 0;
+        input[type="text"] {
+            padding: 1em;
+            border: 0;
+            width: 18em;
+            border-radius: 2px 0 0 2px;
+            background: $bg-color;
+            opacity: .3;
+        }
+        input[type="button"] {
+            color: $highlight-text-color;
+            padding: 1em;
+            border: 0;
+            width: 6em;
+            border-radius: 0 2px 2px 0;
+            background-color: $button-color;
+        }
+    }
 }
