--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -10,6 +10,7 @@ $text-color: #4f4f4f;
 $secondy-text-color: #d9dada;
 $highlight-text-color: #ffffff;
 $button-color: #6cdcac;
+$border-color: #2a2a2a;
 body {
     font-family: 'Open Sans', sans-serif;
     font-size: 62.5%;
@@ -84,16 +85,86 @@ body {
             border-bottom: 1px solid $secondy-text-color;
             border-left: 1px solid $secondy-text-color;
             &:last-child {
-            	border-right: 1px solid $secondy-text-color;
+                border-right: 1px solid $secondy-text-color;
             }
             h2 {
-            	font-size: 2em;
-            	padding: 1em 0;
+                font-size: 2em;
+                padding: 1em 0;
             }
             h3 {
-            	padding: 0 0 2em 0;
+                padding: 0 0 2em 0;
             }
         }
         @include clearfix;
+    }
+}
+.how-it-works {
+    li {
+        float: left;
+        width: 33.33%;
+        &:before {
+            display: block;
+            content: "";
+            background: silver;
+            width: 100%;
+            height: 1px;
+            // position: absolute;
+            position: relative;
+            top: 3.2em;
+            left: 49%;
+            margin: 0 2em;
+            z-index: 1;
+        }
+        &:last-child:before {
+            display: none;
+        }
+    }
+    h2 {
+        font-size: 2em;
+        text-transform: uppercase;
+        padding: 1em 0;
+        &:after {
+            display: block;
+            content: "";
+            background-color: silver;
+            width: 2em;
+            height: .1em;
+            margin: .4em auto;
+        }
+    }
+    h3 {
+    	font-size: 1.8em;
+    	font-weight: bold;
+    	margin: 1em 0;
+    }
+    p {
+    	padding: 0 4em;
+    	color: grey;
+    	line-height: 1.4em;
+    }
+    .number {
+        font-size: 2em;
+        color: silver;
+        background-color: $bg-color;
+        border: 1px solid silver;
+        width: 1em;
+        height: 1em;
+        display: block;
+        margin: 1em auto 2em;
+        padding: .4em;
+        z-index: 2;
+        @include border-radius(100%);
+    }
+    i {
+        font-size: 3.6em;
+    }
+    .fa-list {
+        color: #eca95a;
+    }
+    .fa-pencil {
+        color: #ac9cd2;
+    }
+    .fa-users {
+        color: #4d99cb;
     }
 }
